possible fix for slider handle on iOS, ref: https://github.com/Ecotrust/enketo/commit/907956b1891b380d7e9377d42fa1969d614b4863

--- a/src/sass/component/_side-slider.scss
+++ b/src/sass/component/_side-slider.scss
@@ -54,6 +54,7 @@
   h3 {
     color: white; }
   .handle {
+    font-family: arial, sans-serif;
     position: fixed;
     top: 50%;
     z-index: 10;
